# transport_catalog

./: .gitignore  README.md
resources/: make_base_sample.html
src/: CMakeLists.txt  data_generator.cpp  data_generator.h  descriptions.cpp  descriptions.h  descriptions.proto  filters.cpp  filters.h  json.cpp  json.h  main.cpp  map_renderer.cpp  map_renderer.h  map_renderer.proto  phone.proto  requests.cpp  requests.h  sphere.cpp  sphere.h  sphere.proto  svg.h  svg.proto  svg_serialize.cpp  test_data_generator.cpp  test_data_generator.h  test_descriptions.cpp  test_descriptions.h  test_filters.cpp  test_filters.h  test_main.cpp  test_main.h  test_map.cpp  test_map.h  test_ostreams.cpp  test_ostreams.h  test_requests.cpp  test_requests.h  test_runner.h  test_yellow_pages_private.cpp  test_yellow_pages_private.h  (+12 more)
test_inputs/: data_less_yellow_pages.txt  failed case _  failed_case_4.txt  part_q_make_base_2.txt  part_q_process_requests_1.txt  part_q_process_requests_1_out.txt  part_q_process_requests_2.txt  part_q_process_requests_2_out.txt  part_r_make_base.txt  part_r_process_requests.txt  part_r_process_requests_out.txt  part_s_make_base.txt  part_s_make_base_1.txt  part_s_process_requests.txt  part_t_make_base.txt  route_to_company_request.txt  route_to_company_response.txt  sample_requests.txt  test_company_save_load.txt  test_database_parsing.txt  test_database_save_load.txt  test_requests.txt  test_tc_in_1.txt  test_tc_name_match.txt  test_tc_rubric_match.txt  test_tc_save_load.txt  test_tc_url_match  test_tc_url_match.txt
test_out/: map_response1.txt  sample_output.txt
